infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phrydlpg-backend
spec:
  selector:
    app: phrydlpg-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
