infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phrydlpg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.phrydlpg.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phrydlpg-backend
            port:
              number: 80
